--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
-<div class="container">
-    <h1>Selamat Datang di NISKALA ART!</h1>
-    <img src="foto.jpg" alt="Foto Saya" class="profile-pic">
-    <h2>Tentang Saya</h2>
-    <p>Nama saya Noufal Nazirin Niskala. Saya bisa membuat logo, gambar ilustrasi (Artwork) Dan edit foto potrait!</p>
-    <h2>Kontak</h2>
-    <p>Email: <a href="mailto:emailkamu@gmail.com">Noufalnazirinniskala@gmail.com</a></p>
-    <p>Instagram: <a href="https://instagram.com/usernamekamu" target="_blank">@noufal_xiii</a></p>
-</div>
+<!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Profil Saya</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <h1>Selamat Datang di NISKALA ART!</h1>
+        <img src="foto.jpg" alt="Foto Saya" class="profile-pic">
+        <h2>Tentang Saya</h2>
+        <p>Nama saya Noufal Nazirin Niskala. Saya bisa membuat logo, gambar ilustrasi (Artwork) Dan edit foto potrait!!</p>
+        <h2>Kontak</h2>
+        <p>Email: <a href="mailto:emailkamu@gmail.com">Noufalnazirinniskala@gmail.com</a></p>
+        <p>Instagram: <a href="https://instagram.com/usernamekamu" target="_blank">@noufal_xiii</a></p>
+    </div>
+</body>
+</html>
