--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <h2>Tentang Saya</h2>
         <p>Nama saya Noufal Nazirin Niskala. Saya bisa membuat logo, gambar ilustrasi (Artwork) Dan edit foto potrait!!</p>
         <h2>Kontak</h2>
-        <p>Email: <a href="mailto:emailkamu@gmail.com">Noufalnazirinniskala@gmail.com</a></p>
-        <p>Instagram: <a href="https://instagram.com/usernamekamu" target="_blank">@noufal_xiii</a></p>
+        <p>Email: <a href="mailto:Noufalnazirinniskala@gmail.com">Noufalnazirinniskala@gmail.com</a></p>
+        <p>Instagram: <a href="https://instagram.com/noufal_xiii" target="_blank">@noufal_xiii</a></p>
     </div>
 </body>
 </html>
